fix(docker): Fix docker-compose stack
